--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <title></title>
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="{{ site.github.url }}/assets/css/main.css">
     
   </head>
   
@@ -25,7 +25,7 @@
  
     <!-- javascript and jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
-    <script src="assets/js/functions.js"></script>
+    <script src="{{ site.github.url }}/assets/js/functions.js"></script>
   
   </body>
   
