Made more gitHub compatibility changes
Moved work to includes, changed work folder's contents to .md , changed js function, changed about.html

--- a/work/proj-3.html
+++ b/work/proj-3.html
@@ -1,1 +1,12 @@
-<img src="{{ site.github.url}}/assets/img/work/proj-3/CrispyIcons-PetrasNargela.jpg" alt="Crispy Icons">
+<html>
+      <head>
+        <meta charset="UTF-8">
+        <title>proj-3.md</title>
+      </head>
+      <body>
+        <hr>
+<h2 id="title-crispy-icons">title: Crispy Icons</h2>
+<p><img src="{{ site.github.url }}/assets/img/work/proj-3/CrispyIcons-PetrasNargela.jpg" alt="Crispy Icons"></p>
+
+      </body>
+    </html>
