--- a/work/proj-6.html
+++ b/work/proj-6.html
@@ -1,1 +1,12 @@
-<img src="{{ site.github.url }}/assets/img/work/proj-6/TimeLinePage-SergeyValiukh.jpg" alt="Timeline Page">
+<html>
+      <head>
+        <meta charset="UTF-8">
+        <title>proj-6.md</title>
+      </head>
+      <body>
+        <hr>
+<h2 id="title-timeline-page">title: Timeline Page</h2>
+<p><img src="{{ site.github.url }}/assets/img/work/proj-6/TimeLinePage-SergeyValiukh.jpg" alt="Timeline Page"></p>
+
+      </body>
+    </html>
