--- a/work/proj-1.html
+++ b/work/proj-1.html
@@ -1,9 +1,17 @@
-<img src="{{ site.github.url}}/assets/img/work/proj-1/img1.jpg" alt="Type international">
+<html>
+      <head>
+        <meta charset="UTF-8">
+        <title>proj-1.md</title>
+      </head>
+      <body>
+        <hr>
+<h2 id="title-typo-international-design-talks-stuff">title: Typo International Design Talks Stuff</h2>
+<p><img src="{{ site.github.url }}/assets/img/work/proj-1/img1.jpg" alt="Typo International"></p>
+<p>TYPO: International Design Talks is an annual event held in Berlin, London, and San Francisco. This promotional project is developed to market the event for the designindustry. The use of patterns, sophisticated color scheme and typography are applied for the print and mobile application.</p>
+<p><img src="{{ site.github.url }}/assets/img/work/proj-1/img2.jpg" alt="Typo International">
+<img src="{{ site.github.url }}/assets/img/work/proj-1/img3.jpg" alt="Typo International">
+<img src="{{ site.github.url }}/assets/img/work/proj-1/img4.jpg" alt="Typo International">
+<img src="{{ site.github.url }}/assets/img/work/proj-1/img5.jpg" alt="Typo International"></p>
 
-<p>TYPO: International Design talks is an annual event held in Berlin, London and San Fransico. This promotional project is developed to mark the event for the design industry. The use of patterns, sophisticated color schemes and typography are applied for the print and mobile applications</p>
-
-
-<img src="{{ site.github.url}}/assets/img/work/proj-1/img2.jpg" alt="Type international">
-<img src="{{ site.github.url}}/assets/img/work/proj-1/img3.jpg" alt="Type international">
-<img src="{{ site.github.url}}/assets/img/work/proj-1/img4.jpg" alt="Type international">
-<img src="{{ site.github.url}}/assets/img/work/proj-1/img5.jpg" alt="Type international">
+      </body>
+    </html>
