--- a/work/proj-2.html
+++ b/work/proj-2.html
@@ -1,1 +1,12 @@
-<img src="{{ site.github.url}}/assets/img/work/proj-2/CityIn-AntonSkvortsov.jpg" alt="City In">
+<html>
+      <head>
+        <meta charset="UTF-8">
+        <title>proj-2.md</title>
+      </head>
+      <body>
+        <hr>
+<h2 id="title-city-in-website-concept">title: City In Website Concept</h2>
+<p><img src="{{ site.github.url }}/assets/img/work/proj-2/CityIn-AntonSkvortsov.jpg" alt="City In"></p>
+
+      </body>
+    </html>
